2001-05-25  Tambet Ingo  <tambet@ximian.com>

	* boot.pl.in (xst_boot_conf_set_images): Reimplement.
	(xst_boot_conf_add_image): Helper function for (xst_boot_conf_set_images).
	(xst_boot_conf_edit_image): ditto.
	(xst_boot_conf_delete_image): ditto.
	(xst_boot_conf_is_image): ditto.
	(xst_boot_conf_find_image): ditto.

2001-05-25  Chema Celorio  <chema@celorio.com>

	* boot-conf.in (xml_print_global_kws): remove print. duh !
	* boot.pl.in (xst_boot_parse_global): ditto

2001-05-24  Arturo Espinosa Aldama  <arturo@ximian.com>

	* 0.5 RELEASE

2001-05-24  Arturo Espinosa Aldama  <arturo@ximian.com>

	* share.pl.in (xst_share_parse_nfs_exports): If the pattern
	for a client_info is empty, assume 0.0.0.0/0.

	* network.pl.in (xst_network_suse70_interface_activate): Fixed
	bug that prevented ifaces from activation/deactivation in suse70.
	(xst_network_interface_set): Force activation setup of interfaces.
	Implemented force macanism in other activation functions.

	* parse.pl.in (xst_parse_replace_files): return () if $values
	is undef.
	(xst_parse_from_table): Don't unshift files if none were passed.

	* replace.pl.in (xst_replace_from_table): same.

	* report.pl.in (xst_report_enter): Ugly hack to avoid po warnings.

2001-05-23  Arturo Espinosa Aldama  <arturo@ximian.com>

	* replace.pl.in (xst_replace_pump_get_next_option): More pump
	stuff.
	(xst_replace_pump_option_locate): Implemented.
	(xst_replace_pump_get_device): Implemented.
	(xst_replace_pump_add_device): Implemented.
	(xst_replace_pump_iface_option_str): Implemented.
	(xst_replace_pump_iface_kw): Implemented.
	(xst_replace_pump_iface_kw_not): Implemented.

	* parse.pl.in (xst_parse_from_table): eliminated dumb paranoia.
	(xst_parse_shell_unescape): Name change. This function unescapes.
	(xst_parse_shell_escape): Taken for replace, to use in other places.
	
	Pump stuff that may be useful for dhcpd.conf some day:
	(xst_parse_pump_get_next_option): Implemented.
	(xst_parse_pump_get_device): Implemented.